@@ -619,6 +619,7 @@ int	find_char(char *str,char c);
 int	is_double_prefix(char *str);
 int	is_double(char *c);
 int	is_uint(char *c);
+int	is_uint64(register char *str, zbx_uint64_t *value);
 void	zbx_rtrim(char *str, const char *charlist);
 void	zbx_ltrim(register char *str, const char *charlist);
 void	zbx_remove_chars(register char *str, const char *charlist);
