@@ -1,5 +1,7 @@
 Changes for 1.6.2
 
+ - [DEV-275] changed value processing. Multiplier after delta (Sasha)
+ - [DEV-274] added overflow check for uint64 for incoming values (Sasha)
  - [ZBX-506] fixed duplicate UnavailableDelay in zabbix_server.conf (Sasha)
  - [ZBX-428] added internal check zabbix[requiredperformance] (Sasha)
  - [ZBX-639] fixed numeric snmp oid for ifOutOctets. Thanks to Alexandr Kovalenko. (Sasha)
